fix: update margin for slide pretitle paragraphs for better spacing

--- a/public/themes/dsfr.css
+++ b/public/themes/dsfr.css
@@ -216,7 +216,7 @@ body {
   margin: 0;
 }
 .reveal section.slide-h3 hgroup .slide-pretitle p {
-  margin: 0 0 1em 0;
+  margin: 0 0 0.65em 0;
   font-size: 0.9em;
   font-style: normal;
   color: var(--dsfr-text-mention) !important;
