--- a/themes/dsfr/_typography.scss
+++ b/themes/dsfr/_typography.scss
@@ -170,7 +170,7 @@
     }
 
     .slide-pretitle p {
-      margin: 0 0 1em 0;
+      margin: 0 0 .65em 0;
       font-size: 0.9em;
       font-style: normal;
       color: var(--dsfr-text-mention) !important;
